test_src/compiler_errors/types/demotion/DemoteDoubleToFloat.b
class DemoteDoubleToFloat {
    void test() {
        Float value = 2.0;
        println(value);
    }
}
